feat(dev): add backend api for view pbv6 backtest log
